Testing Times plugin on greek language.

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,12 +11,25 @@
 	<body>
 		<div class = 'mainspace'></div>
 		<div class = 'main'>
+		<!-- 
 		<textarea class = 'input' id = 'input'>This is a demo of Knwl.js and just a few of the parser plugins.
 
 I'm sorry, I'm extremely busy right now. I just looked at the clock, and it's 12:54 AM, I've still got a lot of work to do.  Don't worry about the event tomorrow, it's been moved ahead a week, the 28th of December. Remember though, you've got to call to get a ticket soon, their # is 212-323-1239 and their based in Los Angeles, or call the toll free number 1 800 567-4321. Their website says it costs $23 per person.
 If you've got enough time, they have some more information on their website, http://theevent.com. Also checkout some comments at #coolevent.
 Regards,
 David (david32@gmail.com)</textarea>
+		-->
+
+		<textarea class = 'input' id = 'input'>Αυτό είναι ένα demo του Knwl.js και μερικά από τα parser plugins του.
+
+Με συγχωρείτε, είμαι εξαιρετικά απασχολημένος αυτή τη στιγμή. Μόλις είδα την ώρα, και είναι 12:54 πμ, ακόμα έχω αρκετή δουλειά να κάνω. Μην ανησυχείτε για την αυριανή εκδήλωσω, την μετέφερα μια εβδομάδα μπροστά, στις 28 Δεκεμβρίου. Να θυμάστε όμως, ότι θα πρέπει να καλέσετε για να κλείσετε εισιτήριο σύντομα, στο 210-6098112 και βρίσκονται στην Αθήνα, ή καλέστε εντελώς δωράν στο 1-800 567-4321. Η ιστοσελίδα τους αναφέρει ότι κοστίζει €32 κατ' άτομο.
+Αν έχετε χρόνο, έχουν κάποιες πληροφορίες στην ιστοσελίδα τους, http://theevent.com. Μην ξεχάσετε να ελέγξετε μερικά σχόλια στο #coolevant.
+
+Με εκτίμηση,
+Κώστας (kostas@gmail.com)
+</textarea>
+
+
 		<div class = 'menu'>
 			<div class = "actions">
 				<p class = 'title'>KNWL.js Demo</p>
